--- a/src/main/resources/public/chat.html
+++ b/src/main/resources/public/chat.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat view</title>
+
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles/mystyle.css">
+    <link rel="stylesheet" type="text/css" href="styles/style-chat.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
