--- a/src/main/resources/public/registration.html
+++ b/src/main/resources/public/registration.html
@@ -28,6 +28,7 @@
             if (xhr.status !== 200) {
                 alert(xhr.status + ': ' + xhr.statusText);
             } else {
+                document.cookie = "lang=" + lang;
                 window.location.replace("/chat.html");
             }
         };
@@ -42,7 +43,7 @@
         <h3 class="h3">Registration</h3>
         <form class="form">
             <input id="username" class="input" type="text" placeholder="USERNAME" required />
-            <select id="lang" class="input" required>
+            <select id="lang" class="input" required >
                 <option disabled selected>Language</option>
                 <option value="eng">English</option>
                 <option value="ukr">Ukrainian</option>
